--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@nrwl/cypress": "13.8.1",
     "@nrwl/eslint-plugin-nx": "13.8.1",
     "@nrwl/jest": "13.8.1",
+    "@nrwl/linter": "^13.8.1",
     "@nrwl/nest": "13.8.1",
     "@nrwl/node": "13.8.1",
     "@nrwl/workspace": "13.8.1",
@@ -118,7 +119,6 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
-    "codelyzer": "6.0.0",
     "cypress": "^9.4.1",
     "dotenv": "10.0.0",
     "eslint": "8.8.0",
@@ -131,7 +131,6 @@
     "source-map-explorer": "^2.5.2",
     "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3",
     "typescript": "4.5.5"
   }
 }
